Link the Social Media and Fix the Z-Index of the Dropdown Menu

--- a/style/style.css
+++ b/style/style.css
@@ -94,6 +94,7 @@ ul li ul {
     background: #fb5407;
     padding: 0;
     min-width: 150px;
+    z-index: 999; /* High priority of Display */
 }
 
 ul li ul li {
